# goober

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/: release.yml
.github/workflows/: main.yml
src/: App.svelte  app.d.ts  app.postcss  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  parse.rs  parse_music.rs
src/lib/: AddTracksModal.svelte  Album.svelte  CheckOption.svelte  Controls.svelte  CreatePlaylistModal.svelte  DeletePlaylistModal.svelte  EmptyPlaylistModal.svelte  Player.svelte  player.ts
src/routes/: +page.svelte
src/routes/about/: +page.svelte
src/routes/preferences/: +page.svelte
