[package]
name = "goober"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-all", "fs-all", "path-all", "protocol-asset", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jwalk = "0.8.1"
audiotags = "0.4.1"
serde_with = "3.0.0"
linked_hash_set = "0.1.4"
rodio = "0.17.1"
image = "0.24.6"
base64 = "0.21.2"
directories = "5.0.1"
sanitize-filename = "0.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
