[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "window-set-title", "global-shortcut-all", "path-all", "protocol-asset", "shell-open", "fs-all", "dialog-all"] }
jwalk = "0.8.1"
audiotags = "0.4.1"
serde_with = "3.0.0"
linked_hash_set = "0.1.4"
rodio = "0.17.1"
image = "0.24.6"
base64 = "0.21.2"
directories = "5.0.1"
sanitize-filename = "0.4.0"
lofty = "0.13.0"
declarative-discord-rich-presence = { git = "https://github.com/KPidS/declarative-discord-rich-presence" }
Inflector = "0.11.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
